@@ -14,8 +14,8 @@
                 <atom:link href="https://www.piggy-coin.com/piggybanks/Appcast.xml" rel="self" type="application/rss+xml" />
 
                 <item>
-                        <title>Version 1.2.2.0</title>
-                        <pubDate>Fri, 24 Apr 2015 21:54:11 +0800</pubDate>
+                        <title>Version 1.2.3.0</title>
+                        <pubDate>Tue, 10 Nov 2015 21:54:11 +0800</pubDate>
                         <guid isPermaLink="true">https://github.com/piggycoin/newpiggycoin/blob/master/ReleaseNotes.txt</guid>
 
                         <!-- One of those (<link> is preferred by Fervor, <sparkle:releaseNotesLink> is used by Sparkle) -->
@@ -29,7 +29,7 @@
                         <!-- Windows version. -->
                         <enclosure
                                 url="https://www.piggy-coin.com/getting-started/"
-                                fervor:version="1.2.2.1"
+                                fervor:version="1.2.3.0"
                                 fervor:platform="Q_OS_WIN32"
                                 length="11576"
                                 type="text/html" />
@@ -37,7 +37,7 @@
                         <!-- Linux version. -->
                         <enclosure
                                 url="https://www.piggy-coin.com/getting-started/"
-                                fervor:version="1.2.2.1"
+                                fervor:version="1.2.3.0"
                                 fervor:platform="Q_OS_LINUX"
                                 length="11576"
                                 type="text/html" />
@@ -48,7 +48,7 @@
                          -->
                         <enclosure
                                 url="https://www.piggy-coin.com/getting-started/"
-                                sparkle:version="1.2.2.1"
+                                sparkle:version="1.2.3.0"
                                 fervor:platform="Q_OS_MAC"
                                 length="11576"
                                 type="text/html"
