@@ -34,7 +34,7 @@ PROJECT_NAME           = PiggyCoin
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = 1.2.2.1
+PROJECT_NUMBER         = 1.2.3.0
 
 # Using the PROJECT_BRIEF tag one can provide an optional one line description 
 # for a project that appears at the top of each page and should give viewer 
