@@ -1,5 +1,5 @@
 TARGET = newpiggycoin-qt
-VERSION = 1.2.2.1
+VERSION = 1.2.3.0
 TEMPLATE = app
 INCLUDEPATH += src src/json src/qt
 DEFINES += QT_GUI BOOST_THREAD_USE_LIB BOOST_SPIRIT_THREADSAFE BOOST_THREAD_PROVIDES_GENERIC_SHARED_MUTEX_ON_WIN __NO_SYSTEM_INCLUDES
