@@ -39,6 +39,9 @@ namespace Checkpoints
         (415678, uint256("0x35ed1d3c878cd11ddd50b8dcadf62f76607411a8689e6215153c940653fd963d"))
         (450054, uint256("0xf1fbaf95f2820da1ca50e202325cd90fac4cfe002d2f182c5369a951cc63ff5d"))
         (595164, uint256("0x37d52c19e958950097a747b0f58eefd4e0d19d39f8e4e92cc170c7b354bad07a"))
+        (651356, uint256("0xb1a119a10f06a567f47da787602482afd97a7dacd623805ef2981ecf891008ac"))
+        (699826, uint256("0x9414787c5f646b2668628287c5e1ed9bd9650081c878b7790a48f4550bff9bb4"))
+        (750234, uint256("0x474c0d1319ab93cca709c766d640231734fe3e483151ee36020814a5afca69f5"))
     ;
 
     // TestNet has no checkpoints
