@@ -8,8 +8,8 @@
 // These need to be macros, as version.cpp's and bitcoin-qt.rc's voodoo requires it
 #define CLIENT_VERSION_MAJOR       1
 #define CLIENT_VERSION_MINOR       2
-#define CLIENT_VERSION_REVISION    2
-#define CLIENT_VERSION_BUILD       1
+#define CLIENT_VERSION_REVISION    3
+#define CLIENT_VERSION_BUILD       0
 
 // Converts the parameter X to a string after macro replacement on X has been performed.
 // Don't merge these into one macro!
